# Chessmate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Chessmate/: CMakeLists.txt  ChessGame.cpp  ChessGame.h  ChessGameVisualisation.cpp  ChessGameVisualisation.h  Chessboard.cpp  Chessboard.h  ChessboardField.cpp  ChessboardField.h  Chessgame.cpp  Chessgame.h  Pieces.cpp  Pieces.h  main.cpp  main.h
QTProject/: CMakeLists.txt  ChessGame.cpp  ChessGame.h  Chessboard.cpp  Chessboard.h  ChessboardField.cpp  ChessboardField.h  Pieces.cpp  Pieces.h  QTProject.cpp  QTProject.h  main.cpp  main.h
